<resources>
    <string name="app_name">Pokédex</string>
    <string name="splash_image_description">Logo bola Pokédex</string>
    <string name="search_hint">Digite o nome do Pokémon</string>
    <string name="pokemon_image_description">Imagem do Pokémon</string>
    <string name="pokemon_details_id">ID: %1$d</string>
    <string name="pokemon_details_type">Tipo: %1$s</string>
    <string name="pokemon_height">Altura: %1$.1f m</string>
    <string name="pokemon_weight">Peso: %1$.1f kg</string>
    <string name="pokemon_stats_title">Stats</string>
    <string name="pokemon_hp">HP</string>
    <string name="pokemon_attack">Attack</string>
    <string name="pokemon_defense">Defense</string>
    <string name="pokemon_special_attack">Sp. Atk</string>
    <string name="pokemon_special_defense">Sp. Def</string>
    <string name="pokemon_speed">Speed</string>
    <string name="pokemon_type_title">Tipos</string>
    <string name="pokemon_type_unknown">Tipos não informados</string>
    <string name="filter_type_label">Tipo</string>
    <string name="filter_generation_label">Geração</string>
    <string name="filter_type_all">Todos os tipos</string>
    <string name="filter_generation_all">Todas as gerações</string>
    <string name="filter_generation_gen_i">Gen I</string>
    <string name="filter_generation_gen_ii">Gen II</string>
</resources>
